--- a/.gitignore
+++ b/.gitignore
@@ -1,83 +1,2 @@
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-bin/
-*.cfg
-lib/
-include/
-obj/
-shared/
-.git/
-.vscode/
-.idea/
-*.iml
-*.swp
-
-
-# Python #
-####################
-__pycache__/
-*.py[cod]
-*$py.class
-.pytest_cache/
-.pyre/
-.pytype/
-.mypy_cache/
-.pyright/
-
-# Virtual Environments #
-########################
-venv/
-ENV/
-env/
-.venv/
-.env/
-.ENV/
-node_modules/
-# Jupyter Notebook #
-####################
-.ipynb_checkpoints
-# VS Code #
-####################
-.vscode/
-.history/
-# macOS #
-####################
-.DS_Store
-.AppleDouble
-.LSOverride
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*
